<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="185dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="404dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_text"
                        android:textSize="50dp" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="383dp"
                        android:layout_height="match_parent"
                        android:background="#00FFFFFF"
                        android:paddingLeft="20dp"
                        android:scaleType="fitXY"
                        android:visibility="visible"
                        app:srcCompat="@drawable/flag" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_marginTop="50dp"
                        android:text="@string/switch_text"
                        android:textSize="24sp" />
                </GridLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0">

                    <Button
                        android:id="@+id/pressMeBtn"
                        android:layout_width="187dp"
                        android:layout_height="82dp"
                        android:text="@string/button_text"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="220dp"
                        android:layout_height="121dp"
                        android:layout_row="0"
                        android:layout_rowWeight="0"
                        android:layout_column="2"
                        android:layout_columnWeight="0"
                        android:text="@string/checkBox_text"
                        android:textSize="24sp" />

                </GridLayout>

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:ems="10"
                    android:hint="@string/editText_hint_text"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />

            </GridLayout>
        </LinearLayout>
    </ScrollView>

</GridLayout>